--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Idea Box</title>
+    <title>2DoBox</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
   <body>
-    <section class="header">
-      <h1>idea<span id="header-box">box</span></h1>
-      <input type="text" name="title" placeholder="Title" class="input-boxes" id="input-title" aria-labelledby="title">
-      <br>
-      <input type="text" name="body" placeholder="Body" class="input-boxes" id="input-body" aria-labelledby="body">
-      <br>
-      <button class="input-boxes" type="submit" id="save-btn">save</button>
-    </section>
-    <section class="body">
+    <header>
+      <h1>2Do<span class="logo-style">Box</span></h1>  
+      <form>
+        <input type="text" name="title" placeholder="Title" class="input-boxes input-title" aria-labelledby="title">
+        <input type="text" name="body" placeholder="Body" class="input-boxes input-body" aria-labelledby="body">
+        <button class="input-boxes" id="save-btn">Save</button>
+      </form>
+    </header>
+    <main class="body">
       <input type="search" name="search" placeholder="Search" id="search-field">
-      <section class="append-here">
-      </section>
-    </section>
+      <section class="append-here"></section>
+    </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="jquery-3.2.1.min.js"><\/script>')</script>
     <script type="text/javascript" src="scripts.js"></script>
