Refactor Js, added enable button function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form>
         <input type="text" name="title" placeholder="Title" class="input-boxes input-title" aria-labelledby="title">
         <input type="text" name="body" placeholder="Body" class="input-boxes input-body" aria-labelledby="body">
-        <button class="input-boxes" id="save-btn">Save</button>
+        <button class="input-boxes" id="save-btn" disabled>Save</button>
       </form>
     </header>
     <main class="body">
