Set importance feature working

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <main class="body">
       <input type="search" name="search" placeholder="Search" id="search-field">
       <article class="filter-buttons">
-        <button class="filter-quality critical-btn">Critical</button>
-        <button class="filter-quality high-btn">High</button>
-        <button class="filter-quality normal-btn">Normal</button>
-        <button class="filter-quality low-btn">Low</button>
-        <button class="filter-quality none-btn">None</button>
+        <button class="filter-importance critical-btn">Critical</button>
+        <button class="filter-importance high-btn">High</button>
+        <button class="filter-importance normal-btn">Normal</button>
+        <button class="filter-importance low-btn">Low</button>
+        <button class="filter-importance none-btn">None</button>
       </article>
       <section class="append-here"></section>
       <article class="bottom-btns">
